--- a/.env.testing
+++ b/.env.testing
@@ -7,12 +7,12 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=default
-DB_USERNAME=default
-DB_PASSWORD=secret
+DB_PORT=3306
+DB_DATABASE=petshop
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
